# rust-sgx-sdk

./: Readme.md
samplecode/demo/: GeneralSettings.h  cert_and_key.pem  client_encrypt.py
samplecode/demo/Application/enclave/: Cargo.toml  enclave.edl
samplecode/demo/Application/enclave/src/: crypto.rs  lib.rs  primitive.rs  ra.rs
samplecode/demo/Enclave/: Enclave.cpp  Enclave.h
samplecode/demo/GoogleMessages/: Messages.pb.cc  Messages.pb.h  Messages.proto
samplecode/demo/MessageHandler/: MessageHandler.cpp  MessageHandler.h
samplecode/demo/Networking/: AbstractNetworkOps.cpp  Network_def.h
samplecode/demo/ServiceProvider/isv_app/: VerificationManager.cpp  VerificationManager.h
samplecode/demo/ServiceProvider/service_provider/: ServiceProvider.cpp
samplecode/dpml-sgd/app/src/: main.rs
samplecode/dpml-sgd/enclave/: Cargo.toml  Enclave.edl
samplecode/remoteattestation/: GeneralSettings.h
samplecode/remoteattestation/ServiceProvider/isv_app/: isv_app.cpp
samplecode/remoteattestation/ServiceProvider/service_provider/: ServiceProvider.cpp
samplecode/test/: client_encrypt.py
samplecode/test/app/: Cargo.toml
samplecode/test/app/src/: main.rs
samplecode/test/enclave/: Cargo.toml  Enclave.edl
samplecode/test/enclave/src/: crypto.rs  lib.rs  lib_old.rs  primitive.rs
