[package]
name = "app"
version = "1.0.0"
authors = ["Lun Wang, wanglun@berkeley.edu",
           "Li Shen, l.shen@alibaba-inc.com",
           "Baidu"]
build = "build.rs"

[dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
dirs = "1.0.2"
rulinalg = { git = "https://github.com/AtheMathmo/rulinalg" }
csv = "1"
