[package]
name = "RAenclave"
version = "1.0.0"
authors = [
    "Lun Wang <wanglun@berkeley.edu>",
    "Baidu"
]

[lib]
name = "raenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../../sgx_types" }
sgx_trts = { path = "../../../../sgx_trts" }
sgx_tstd = { path = "../../../../sgx_tstd" }
sgx_rand = { path = "../../../../sgx_rand" }
sgx_tdh = { path = "../../../../sgx_tdh" }
sgx_tcrypto = { path = "../../../../sgx_tcrypto" }
sgx_tservice = { path = "../../../../sgx_tservice" }
sgx_tkey_exchange = { path = "../../../../sgx_tkey_exchange" }

[dependencies]
num = {path = "../../../../third_party/num", default-features = false}
rulinalg = {path = "../../../../third_party/rulinalg"}
rusty-machine = { path = "../../../../third_party/rusty-machine", features = ["datasets"] }
